# Xolver

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  COMMAND.md  LICENSE  NOTES-eqna-track-c.md  NOTES-eqna.md  NOTES-nia.md  NOTES-nra.md  NOTICE  PUBLIC_ALLOWLIST  README.md  adam-warlock-terra-us-agent.md  jean-grey-orion-donna-troy.md  kid-flash-hulkling-bishop.md  milestone-2026-05-13.md  pyproject.toml  run_euf_validation.sh
app/: CMakeLists.txt  main.cpp
python/: CMakeLists.txt  README.md
python/examples/: propagator_demo.py  quickstart.py
python/src/: bindings.cpp
python/tests/: test_dsl.py  test_lowlevel.py  test_propagator.py
python/xolver/: __init__.py  dsl.py
src/: CMakeLists.txt
src/api/: Solver.cpp  SolverImpl.h  Solver_impl_checksat.cpp  Solver_impl_model.cpp  Solver_impl_solve.cpp
src/experimental/learning/: TraceRecorder.cpp  TraceRecorder.h
src/experimental/mcsat/: MCSatEngine.h  MCSatTrail.cpp  MCSatTrail.h  MCSatTypes.h  McsatSolver.cpp  McsatSolver.h
src/experimental/omt/: Optimize.cpp  Optimize.h
src/experimental/search/: LocalSearchAdvisor.cpp  LocalSearchAdvisor.h
src/expr/: ArithCastNormalizer.cpp  CoreIteLowerer.cpp  CoreIteLowerer.h  Datatype.h  LinearToIntPurifier.cpp  LinearToIntPurifier.h  Smt2Dumper.cpp  Smt2Dumper.h  ir.h  payload.h  rewriter.cpp  rewriter.h  types.h
src/frontend/atomization/: ArithAtomExtractor.cpp  ArithAtomExtractor.h  Atomizer.cpp  Atomizer.h  EufAtomExtractor.cpp  EufAtomExtractor.h
src/frontend/factory/: SolverRegistry.cpp  SolverRegistry.h  StrategyPresets.cpp  StrategyPresets.h  TheoryFactory.cpp  TheoryFactory.h
src/frontend/preprocess/: ArithCastNormalizer.cpp  ArithCastNormalizer.h  ArrayReadOverWrite.cpp  ArrayReadOverWrite.h  BoolSubtermPurifier.cpp  BoolSubtermPurifier.h  FormulaRewriter.cpp  FormulaRewriter.h  IntDivModConstantFold.cpp  IntDivModConstantFold.h  IntDivModLowerer.cpp  IntDivModLowerer.h  LinearToIntPurifier.cpp  ModelConverter.cpp  ModelConverter.h  ModularConsistencyChecker.cpp  ModularConsistencyChecker.h  MonomialSharingPass.cpp  MonomialSharingPass.h  NaryDistinctLowerer.cpp  NaryDistinctLowerer.h  RealDivLowerer.cpp  RealDivLowerer.h  SolveEqs.cpp  SolveEqs.h  StoreTowerEqMultiset.cpp  StoreTowerEqMultiset.h  ToIntDefinitionalLowerer.cpp  ToIntDefinitionalLowerer.h  ToRealLiteralFold.cpp  ToRealLiteralFold.h  UfInArithPurifier.cpp  UfInArithPurifier.h  UnconditionalConstantPropagation.cpp  UnconditionalConstantPropagation.h  UnconstrainedElim.cpp  UnconstrainedElim.h  ZoharBwiAxiomEmitter.cpp  ZoharBwiAxiomEmitter.h
src/learning/: TraceRecorder.cpp  TraceRecorder.h
src/mcsat/: McsatSolver.cpp  McsatSolver.h
src/omt/: Optimize.cpp  Optimize.h
src/parser/: adapter.cpp  adapter.h
src/proof/: AletheProof.cpp  AletheProof.h  ArithModelValidator.cpp  ArithModelValidator.h  BoolClausalProof.cpp  BoolClausalProof.h  ModelValidator.cpp  ModelValidator.h  ProofManager.cpp  ProofManager.h  TheoryProofSink.cpp  TheoryProofSink.h
src/sat/: Atomizer.cpp  Atomizer.h  CadicalBackend.cpp  CadicalBackend.h  CadicalTheoryPropagator.cpp  CadicalTheoryPropagator.h  RelevancyEngine.cpp  RelevancyEngine.h  SatSolver.h  StubSatSolver.cpp
src/search/: LocalSearchAdvisor.cpp  LocalSearchAdvisor.h
src/theory/: DebugTrace.h  LogicFeatureDetector.cpp  LogicFeatureDetector.h  TheoryAtomRegistry.cpp  TheoryAtomRegistry.h  TheoryLemmaDatabase.cpp  TheoryLemmaDatabase.h  TheoryManager.cpp  TheoryManager.h  TheorySolver.h
src/theory/arith/: ArithSolverBase.cpp  ArithSolverBase.h  IncrementalLinearizer.cpp  IncrementalLinearizer.h  README.md  Reasoner.h
src/theory/array/: AniaProfile.h  ArrayReasoner.cpp  ArrayReasoner.h
src/theory/combination/: CareGraph.cpp  CareGraph.h  ConflictMinimizer.cpp  ConflictMinimizer.h  ExplainableRollbackUnionFind.h  Purifier.cpp  Purifier.h  SharedEqualityManager.cpp  SharedEqualityManager.h  SharedTermRegistry.cpp  SharedTermRegistry.h
src/theory/core/: ActiveLiteralSet.h  DebugTrace.h  DerivedFact.cpp  DerivedFact.h  DynamicAtomRegistrar.h  LinearFormKey.h  LogicFeatureDetector.cpp  LogicFeatureDetector.h  TheoryAssignmentView.h  TheoryAtomRegistry.cpp  TheoryAtomRegistry.h  TheoryAtomTypes.h  TheoryLemmaDatabase.cpp  TheoryLemmaDatabase.h  TheoryManager.cpp  TheoryManager.h  TheoryPropagatorCallbacks.h  TheorySolver.h
src/theory/datatype/: DtModelValidator.cpp  DtModelValidator.h  DtReasoner.cpp  DtReasoner.h
src/theory/euf/: EufSolver.cpp  EufSolver.h  EufTermManager.h  (+14 more)
src/util/: CaseStats.cpp  CaseStats.h  EnvParam.cpp  EnvParam.h  MpqUtils.h  RealAlgebraicOps.h  RealValue.cpp  RealValue.h  SmallVector.h  SolveClock.cpp  SolveClock.h  Statistics.cpp  Statistics.h
tests/: CMakeLists.txt
tests/known_gaps/: README.md
tests/modular_ladder/: L1_xsq_mod4_eq2.smt2  L2_xsq_mod3_eq2.smt2  L3_xsqplusx_mod2_eq1.smt2  L4_ps4goal_mod4.smt2  L5_2xsq_mod4_eq3.smt2  README.md
tests/regression/: KNOWN_FAILURES.md  REALVALUE_TOUCHPOINTS.md  ite_nested_sat.smt2  ite_shared_sat.smt2  uflra_001_sat_ite_mixed.smt2
tests/unit/: test_a1_dl_model.cpp  test_a1_linear_flags.cpp  test_a1_merge_locks.cpp  test_alethe_proof.cpp  test_api.cpp  test_arith_model_validator.cpp  test_arith_solver_base.cpp  test_array_combination.cpp  test_array_ir.cpp  test_array_row_fold.cpp  test_array_solver.cpp  test_bit_blast.cpp  test_bit_blast_stress.cpp  test_bool.smt2  test_bound_axioms.cpp  test_bounded_nia_partial.cpp  test_cac_covering.cpp  test_cac_engine.cpp  test_cac_single_cell.cpp  test_care_graph.cpp  test_cdcac_facade.cpp  test_cdcac_sat_first.cpp  test_cdcac_soundness.cpp  test_cdcac_v1.cpp  test_cdcac_v3_certificates.cpp  test_cdcac_v4_projection_policy.cpp  test_cdcac_v5_cdcl_integration.cpp  test_cdcac_v6_performance.cpp  test_cdcac_v7_proof.cpp  test_cdcac_v8_v10_postcore.cpp  test_cdclt.cpp  test_cdclt_loops.cpp  test_chain_graph.cpp  test_combination_infra.cpp  test_combination_no.cpp  test_compare_realalg_certified.cpp  test_datatype_solver.cpp  test_dio_reasoner.cpp  test_domain_store.cpp  test_e2e.cpp  (+127 more)
tools/cli/: CMakeLists.txt  main.cpp
(+2170 files in other folders)
